--- a/docs/localization/rating.mdx
+++ b/docs/localization/rating.mdx
@@ -44,7 +44,7 @@ Import the component from [@faststore/ui](https://developers.vtex.com/docs/guide
 import { Rating } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles into your FastStore project
 
 To apply the styles of this component in your FastStore project, import the following into your stylesheet:
 
@@ -73,7 +73,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow token="--fs-rating-gap" value="var(--fs-spacing-0)" />
@@ -81,7 +81,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   <TokenRow token="--fs-rating-color-empty" value="var(--fs-color-neutral-4)" isColor />
 </TokenTable>
 
-### Nested Elements
+### Nested elements
 
 #### Icon
 
@@ -101,7 +101,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 <Rating value={3.5} icon={<Icon name="Star" />} />
 ```
 
-#### Other Icon
+#### Other icon
 
 <OverviewSection>
   <Rating value={3.5} icon={<Icon name="Heart" />} />
