--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Configuring GraphQL cache control for GET requests'
+title: 'Configuring GraphQL cache control for `GET` requests'
 ---
 
 > ⚠ This is an experimental feature.
 
-This guide explains how to configure caching for GraphQL GET requests using the `graphqlCacheControl` flag. Setting cache rules allows responses to be stored and reused for subsequent requests, reducing server load and improving store performance. For example, caching a product listing page (such as "Summer Collection") for five minutes allows the page to load faster for store visitors. The system serves cached content immediately, then updates it in the background, ensuring fresh results without slowing down the user experience, improving performance, and minimizing additional server load.
+This guide explains how to configure caching for GraphQL `GET` requests using the `graphqlCacheControl` flag. Setting cache rules allows responses to be stored and reused for subsequent requests, reducing server load and improving store performance. For example, caching a product listing page (such as "Summer Collection") for five minutes allows the page to load faster for store visitors. The system serves cached content immediately, then updates it in the background, ensuring fresh results without slowing down the user experience, improving performance, and minimizing additional server load.
 
-The `graphqlCacheControl` flag defines how long responses should be stored and reused by configuring caching for GraphQL GET requests.
+The `graphqlCacheControl` flag defines how long responses should be stored and reused by configuring caching for GraphQL `GET` requests.
 
 > ℹ POST requests are excluded from caching by default. This ensures that data sent in the request body, such as user inputs or sensitive information, is always processed in real time and not served from the cache.
 
